# lemontree210.github.io

./: README.md  index.html  pelicanconf.py  publishconf.py  pyproject.toml
content/: 20250605_hidden_layers.md  20250615_n8n.md  20250829_mkdocs.md  20250901_automation.md  20260111_repository_dispatch.md  20260119_deploy_to_vps.md
docs/: archives.html  authors.html  automating-deployment-to-vps-from-github.html  categories.html  connecting-data-to-representation-with-github-actions.html  creating-documentation-for-my-project-with-ai-in-one-hour.html  hosting-an-app-in-a-docker-container-what-the-heck-is-a-reverse-proxy.html  index.html  lena-shakurova-on-automation-other-people-that-can-teach-you-to-automate-routine-tasks.html  lena-shakurova-on-automation-other-people-that-can-teach-you-to-automate.html  lena-shakurova-on-automation.html  tags.html  why-do-we-need-neural-networks-with-hidden-layers.html
docs/author/: dmitry-kolomatskiy.html
docs/category/: automation.html  deployment.html  documentation.html  machine-learning.html
docs/feeds/: all.atom.xml  deployment.atom.xml  machine-learning.atom.xml
docs/tag/: activation-functions.html  ai-agents.html  ai.html  airtable.html  api.html  apify.html  automation.html  calendar-management.html  cicd.html  clutch.html  content-automation.html  deployment.html  docker.html  github-actions.html  github.html  gmail.html  instantly.html  integration.html  lead-generation.html  (+28 more)
output/: archives.html  authors.html  categories.html  index.html  tags.html  why-do-we-need-neural-networks-with-hidden-layers.html
(+11 files in other folders)
