[tool.poetry]
name = "lemontree210-github-io"
version = "0.1.0"
description = ""
authors = ["Dmitry K <58207913+lemontree210@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "lemontree210"}]

[tool.poetry.dependencies]
python = "^3.9"
pelican = {extras = ["markdown"], version = "^4.11.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

